load more and fav button overlap issue fix

--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@ header {
     justify-content: center;
     justify-content: space-around;
     align-items: center;
-    background: white;
+    background: var(--dark-purple);
+    color: white;
     box-shadow: 0 15px 14px 2px rgba(35, 9, 9, 0.381);
 }
 
@@ -107,11 +108,12 @@ a:hover {
 
 .main-container {
     padding: 1%;
-    margin: var(--height) 2px 2px 2px;
-
+    margin: var(--height) 2px 60px 2px;
+    padding-bottom: 12px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+
 
 }
 
@@ -237,7 +239,7 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 25px;
+    padding-bottom: 25px;
     height: 50px;
     display: flex;
     justify-content: center;
@@ -340,13 +342,6 @@ footer {
     background-color: #b8c2cb1f;
 }
 
-.list-container1 li::marker {
-    content: "→"; /* Set a custom marker content */
-    color: red; /* Customize the color of the marker */
-    font-size: 20px; /* Customize the font size of the marker */
-    font-weight: bold; /* Customize the font weight of the marker */
-} 
-  
 
 .actual-list::-webkit-scrollbar {
     width: 6px;
